--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ministerio Público - Ruleta</title>
-    <link rel="icon" type="image/svg+xml" href="/public/assets/images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/public/image/favicon.svg">
   </head>
   <body>
     <div id="app"></div>
